--- a/css/style.css
+++ b/css/style.css
@@ -1,153 +1,143 @@
-@import 'https://fonts.googleapis.com/css?family=Lato:400,700';
+/* Page styles */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap');
 
-:root {
-  --color-main: #45529d;
-  --color-hide: #8188ae;
-  --color-hide-dark: #7178a0;
-  --color-add: #34baec;
-  --color-add-dark: #2ca6d2;
-  --color-remove: #b8555e;
-  --color-remove-light: #cb636c;
-  --color-remove-dark: #9a3942;
+*{
+    box-sizing: border-box;
 }
 
-* {
-  box-sizing: border-box;
-}
-body {
-  font-family: 'Lato', sans-serif;
-  color: #222;
-  line-height: 1.5;
-  padding: 0 0 40px 0;
-  background: #d5e4ef;
-  margin: 0;
-}
-.wrapper {
-  width: 95%;
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  margin: 0 auto;
-  box-shadow: 0 10px 22px -15px #2e397e;
-}
-header {
-  text-align: center;
-  padding: 2.5em 1em;
-  background-color: var(--color-main);
-}
-header h1 {
-  font-size: 2.5em;
-  line-height: 1;
-  color: #fff;
-  margin: 0 0 0.65em;
-}
-.group {
-  display: flex;
-  justify-content: center;
-}
-.list-container {
-  padding: 0.65em 2em 2em;
-}
-ul {
-  font-size: 1.15em;
-  padding: 0;
-  margin: 0 0 1.15em;
-  list-style: none;
-}
-li {
-  padding: 1.15em 0.5em;
-  display: flex;
-  align-items: center;
-  border-bottom: solid 1px #dedede;
-}
-li:last-child {
-  border: none;
+html{
+    font-size:1.25em; /*20px on most screens*/
 }
 
-/* Form Controls */
-input:focus,
-button:focus {
-  outline: none;
-}
-label {
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-}
-input {
-  font-size: 1.15em;
-  width: 70%;
-  padding: 0.5em 1em;
-  border: 1px solid #dcdcdc;
-}
-input:focus {
-  border: solid 3px var(--color-add);
-}
-button {
-  color: white;
-  font-size: 1em;
-  padding: 1em;
-  background-color: var(--color-add);
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
-}
-button:hover {
-  background-color: var(--color-add-dark);
-}
-button:focus {
-  outline: solid 3px #fff;
-  outline-offset: -3px;
-}
-.btn-toggle {
-  background-color: var(--color-hide);
-}
-.btn-toggle:hover {
-  background-color: var(--color-hide-dark);
-}
-.btn-remove {
-  color: white;
-  padding: 0.85em 1em;
-  background-color: var(--color-remove);
-}
-li input[type="checkbox"],
-li button  {
-  width: auto;
-  margin-left: auto;
-}
-li button {
-  font-size: 0.9rem;
-  padding: 0.65em 0.85em;
-  background-color: var(--color-remove);
-}
-.btn-remove:focus,
-li button:focus {
-  outline-color:  var(--color-remove-dark);
-}
-.btn-remove:hover,
-li button:hover {
-  background-color:  var(--color-remove-light);
+body{
+    color:#454959;
+    font-size: 1rem;
+    font-family: poppins, sans-serif;
 }
 
-/* Additional styles */
-.selected {
-  color:rgba(0, 0, 0, 0.4);
-  transition: color 0.2s ease-in-out;
+div#container {
+
+    width: 100%;
+    max-width: 1200px;
+    margin: 25px auto;
+    background-color: white;
+    box-shadow: 0px 0px 25px rgb(0 0 0 / 50%);
+    font: 10vh;
 }
-.grow {
-  font-size: 4.8rem;
-  transition: font-size 0.8s ease-in-out;
+
+h1, h2{
+    font: 600 2.5rem/1.1 Maven Pro, sans-serif;
+    font-weight: none;
 }
-@media screen and (min-width: 720px) { 
-  .wrapper {
-    max-width: 1000px;
-    width: 60%;
+
+h1{
+    font-size: 2.5rem;   
+}
+
+h2{
+    font-size: 1.25rem;
+}
+
+h3{
+    font-size: 1rem;
+    padding:30px 0px 0px 30px ;
+}
+
+h4{
+    font-size: 0.8rem;
+    margin:-45px 100px 15px 60px;
+    font-weight: none;
+}
+
+h5{
+    font-size: 0.8rem;
+    margin:50px 100px 15px 60px;
+    font-weight: none;
+}
+
+p {
+    font-size: 15px;
+    padding:0px 30px 0px 30px ;
+}
+
+
+/*Navigation*/
+nav {
+    text-decoration: none;
+    width:100%;
+    max-width: 1200px;
+    max-height: 92px;
+    padding:22px 10px 25px;
+    background: #A5CEEC;
+    font-size: 13px;
+    font-family: Maven Pro, sans-serif;
+}
+
+nav ul {
+    text-decoration: none;
+    padding-left: 20px;
+    margin: -8px -6px -8px -8px;
   }
-  input {
-    width: 50%;
+  
+  nav ul li {
+    text-decoration: none;
+    list-style: none;
+    margin: 0 2.5em 0 0;
+    float: right;
+    font-size: 1.2em;
   }
+
+  a:link{
+      color: #0C95FA;
+      text-decoration: none;
+  }
+  
+  a:visited{
+      color:white; text-decoration: none;
+  }
+  
+  a:hover{
+      color:#E9E9E9; text-decoration: none;
+  }
+  
+  a:active{
+      color:#E9E9E9; text-decoration: none;
+  }
+
+  #logo{
+    position: relative;
+    width:100%;
+    max-width: 50px;
+    background: #EDEBEB;
+} 
+
+img{
+    width:20%;
+    float: right;
+}
+
+.name img {
+    vertical-align:middle; 
+    margin-right: 10px;
+}
+
+.carousel {
+    background-color: #F5F2F2;
+}
+
+.border {
+    
+    border-style: solid;
+    border-color: #A5CEEC;
+    width: 600px;
+    margin: 30px 300px 0px;
+    border-radius: 10px;
+}
+
+footer{
+    background-color: none;
+    padding: 20px;
+    color: black;
+    font-size: .8rem;
+    text-align: center;
 }
