--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,8 @@ h2{
 }
 
 h3{
-    font-size: 1rem;
-    padding:30px 0px 0px 30px ;
+    font-size: 1.2rem;
+    padding:0px 0px 0px 30px ;
 }
 
 h4{
@@ -56,7 +56,7 @@ h5{
 }
 
 p {
-    font-size: 15px;
+    font-size: 17px;
     padding:0px 30px 0px 30px ;
 }
 
@@ -112,8 +112,9 @@ nav ul {
 } 
 
 img{
-    width:20%;
+    width:15%;
     float: right;
+    margin: 20px 100px;
 }
 
 .name img {
@@ -123,7 +124,9 @@ img{
 
 .carousel {
     background-color: #F5F2F2;
+    padding: 20px 10px 120px 10px;
 }
+
 
 .border {
     
