--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Page styles */
+/* Homepage styles */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap');
 
 *{
