--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ nav ul {
   }
   
   a:active{
-      color:#E9E9E9; 
+      color:#66b9f5; 
       text-decoration: none;
       padding: 0.5em;
       border-style: solid;
