--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ nav ul {
   }
   
   a:visited{
-      color:white; 
+      color:#0C95FA; 
       text-decoration: none;
       padding: 0.5em;
       border-style: solid;
