Commented out something
I am working on the navigation.

--- a/css/style.css
+++ b/css/style.css
@@ -112,8 +112,8 @@ nav ul {
       color:#66b9f5; 
       text-decoration: none;
       padding: 0.5em;
-      border-style: solid;
-      border-radius: 30px;
+      /* border-style: solid;
+      border-radius: 30px; */
   }
 
   #logo{
