--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,8 @@ footer{
     font-size: .8rem;
     text-align: center;
 }
+
+/*instruction page*/
 .stepBorder {
   border-style: solid;
   border-color: #A5CEEC;
