--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ div#container {
     max-width: 1200px;
     margin: 25px auto;
     background-color: white;
-    box-shadow: 0px 0px 25px rgb(0 0 0 / 50%);
+    /* box-shadow: 0px 0px 25px rgb(0 0 0 / 50%); */
     font: 10vh;
 }
 
@@ -39,8 +39,8 @@ h2{
 }
 
 h3{
-    font-size: 1.2rem;
-    padding:0px 0px 0px 30px ;
+    font-size: 1.5rem;
+    padding:0px 0px 0px 0px ;
 }
 
 h4{
@@ -65,7 +65,7 @@ p {
 nav {
     text-decoration: none;
     width:100%;
-    max-width: 1200px;
+    max-width: 100%;
     max-height: 92px;
     padding:22px 10px 25px;
     background: #A5CEEC;
@@ -254,17 +254,11 @@ img{
     margin-top: -10px;
   }
 
-footer{
-    background-color: none;
-    padding: 20px;
-    color: black;
-    font-size: .8rem;
-    text-align: center;
-}
+  /*Instructions Page*/
 .stepBorder {
   border-style: solid;
   border-color: #A5CEEC;
-  width: 600px;
+  width: 1200px;
   margin: 30px 0px 0px;
   border-radius: 10px;
 }
@@ -301,4 +295,12 @@ ul.fourStep {
 .right {
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
+}
+
+footer{
+    background-color: none;
+    padding: 20px;
+    color: black;
+    font-size: .8rem;
+    text-align: center;
 }
