--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,14 @@ h5{
 }
 
 p {
-    font-size: 17px;
+    font-size: 0.7rem;;
     padding:0px 30px 0px 30px ;
 }
 
 
-/*Navigation*/
-nav {
+/* Navigation*/  
+
+#nav {
     text-decoration: none;
     width:100%;
     max-width: 100%;
@@ -73,13 +74,13 @@ nav {
     font-family: Maven Pro, sans-serif;
 }
 
-nav ul {
+#nav ul {
     text-decoration: none;
     padding-left: 20px;
     margin: -8px -6px -8px -8px;
   }
   
-  nav ul li {
+  #nav ul li {
     text-decoration: none;
     list-style: none;
     margin: 0 2.5em 0 0;
@@ -87,12 +88,12 @@ nav ul {
     font-size: 1.2em;
   }
 
-  a:link{
+  #nav a:link{
       color: #0C95FA;
       text-decoration: none;
   }
   
-  a:visited{
+  #nav a:visited{
       color:#0C95FA; 
       text-decoration: none;
       padding: 0.5em;
@@ -100,7 +101,7 @@ nav ul {
       border-radius: 30px;
   }
   
-  a:hover{
+  #nav a:hover{
       color:#E9E9E9;
       text-decoration: none;
       padding: 0.5em;
@@ -253,7 +254,29 @@ img{
   .message {
     margin-top: -10px;
   }
+/* Breadcrumb Nav*/
 
+.breadcrumb a:link{
+  color: #0C95FA;
+  text-decoration: none;
+}
+
+.breadcrumb a:visited{
+  color:#0C95FA; 
+  text-decoration: none;
+  padding: 0.5em;
+}
+
+.breadcrumb a:hover{
+  color:#0C95FA;
+  text-decoration: none;
+}
+
+.breadcrumb a:active{
+  color:#66b9f5; 
+  text-decoration: none;
+  padding: 0.5em;
+}
   /*Instructions Page*/
 .stepBorder {
   border-style: solid;
@@ -264,14 +287,18 @@ img{
 }
 
 ul.breadcrumb {
-  padding: 20px 20px;
+  padding: 5px 20px;
   list-style: none;
   background-color: #f2f3f5;
+  border-radius: 20px;
+  width: 1100;
+  margin: 10px 30px;
 }
 
 ul.breadcrumb li {
   display: inline;
-  font-size: 18px;
+  font-size: 15px;
+  padding: 10px;
 }
 
 
@@ -279,6 +306,12 @@ ul.breadcrumb li a {
   color: #0C95FA;
   text-decoration: none;
 }
+ul.breadcumb li a:hover{
+  color:#E9E9E9;
+  text-decoration: none;
+  padding: 0.5em;
+}
+
 
 ul.fourStep {
   display: inline;
