still fixing changing things back to how you guys had them

--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ img{
   padding: 0.5em;
 }
   /*Instructions Page*/
-.stepBorder {
+.instructionsBorder {
   border-style: solid;
   border-color: #A5CEEC;
   width: 600px;
