--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,10 +1,4 @@
 
-
-  :root {
-    --hue-neutral: 200;
-    --hue-wrong: 0;
-    --hue-correct: 145;
-  }
   
   .btn-grid {
     display: grid;
@@ -15,11 +9,11 @@
   
   .btn {
     --hue: var(--hue-neutral);
-    border: 1px solid hsl(var(--hue), 100%, 30%);
-    background-color: hsl(var(--hue), 100%, 50%);
+    border: 1px solid ;
+    background-color: #A5CEEC;
     border-radius: 5px;
     padding: 5px 10px;
-    color: white;
+    color: rgb(70, 69, 69);
     outline: none;
   }
   
@@ -28,12 +22,14 @@
   }
   
   .btn.correct {
-    --hue: var(--hue-correct);
-    color: black;
+    background-color: green;
+    color: white;
   }
   
   .btn.wrong {
-    --hue: var(--hue-wrong);
+    /* --hue: var(--hue-wrong); */
+    background-color: red;
+    color: white;
   }
   
   .start-btn, .next-btn {
