--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 
 *{
     box-sizing: border-box;
+    
 }
 
 html{
@@ -26,7 +27,7 @@ div#container {
 }
 
 h1, h2{
-    font: 600 2.5rem/1.1 poppins, sans-serif;
+    font: 600 2.5rem/1.1 "poppins", sans-serif;
     font-weight: none;
 }
 
@@ -61,10 +62,75 @@ p {
     padding:0px 30px 0px 30px ;
 }
 
+img{
+  margin: -30px 0px;
+}
 
-/* Navigation*/  
 
-#nav {
+/* Navigation*/
+
+li, a {
+  font-family: "poppins", sans-serif;
+  font-size: 16px;
+  color: black;
+  text-decoration: none;
+}
+
+nav{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0px 10px;
+  background-color: #A5CEEC;
+}
+
+.logo{
+  cursor: pointer;
+  margin-right: auto;
+  width:8%;
+  height:8%;
+}
+
+.nav_links{
+  list-style: none;
+}
+
+.nav_links li{
+  display: inline-block;
+  padding: 0px 20px;
+}
+
+.nav_links li a:hover { 
+  border: 2px solid #0C95FA;
+  border-radius: 50px;
+  padding: 10px 10px;
+  text-decoration: none;
+}
+
+a:visited{
+  color: #0C95FA;
+  /* border: 1px solid;
+  border-radius: 50px; */
+
+}
+
+
+/* .nav_links li a:active{
+  color:#0C95FA; 
+  text-decoration: none;
+  padding: 0.5em;
+}
+
+.nav_links li a:visited{
+  color:#0C95FA; 
+  text-decoration: none;
+  padding: 0.5em;
+  border-style: solid;
+  border-radius: 20px;
+} */
+
+
+/* #nav {
     text-decoration: none;
     width:100%;
     max-width: 100%;
@@ -116,39 +182,32 @@ p {
       color:#66b9f5; 
       text-decoration: none;
       padding: 0.5em;
-      /* border-style: solid;
-      border-radius: 30px; */
   }
 
-    .logo{
-      float: left;
-      width: 120px;
-      margin: -20px -10px 0px 0;
-  }
+  .logo{
+    float: left;
+    width: 120px;
+    margin: -30px -10px 0px 0;
+  } 
 
-  /* #logo{
-    position: relative;
-    width:100%;
-    max-width: 50px;
-    background: #EDEBEB;
-} 
 .logo img{
 
   float: left;
-  margin: 20px 100px;
+  margin: 20px 100px; 
 
-} */
+}*/
 
-img{
+/* carousel */
+#rotate{
     width:15%;
     float: right;
-    margin: 30px;
+    margin: 10px 30px;
 }
 
 .name img {
     vertical-align:middle; 
     margin-right: 10px;
-}
+} 
 
 .carousel {
     background-color: #F5F2F2;
@@ -302,25 +361,8 @@ section p {
 }
 
 .section:hover{
-  border: #0C95FA;
-    
+  border: #0C95FA;  
 }
-
-
-/* .gallery {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 5vw);
-  grid-gap: 1.5rem; 
-}
-
-.gallery__img {
-  width: 550px;
-  height: 100%;
-  object-fit: cover;
-  display: block; 
-} */
-
 
 /* Breadcrumb Nav*/
 
