samsung page/quiz colours
quiz colours, made Samsung page. The coming soon page is now on the GalaxyS21 page

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -27,12 +27,12 @@
   }
   
   .btn.correct {
-    background-color: green;
+    background-color: #18C956;
     color: white;
   }
   
   .btn.wrong {
-    background-color: red;
+    background-color: #FB4D3D;
     color: white;
   }
   
