--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,27 @@ Jess Navigation
  
 /*iPhone Page*/
 
+/* .grid { 
+  display: grid;
+  grid-template-columns: repeat(2,minmax(300px, 1fr));
+  grid-template-rows: 400px 400px;
+  grid-gap: 15px;
+  align-items: stretch;
+  }
+
+.grid img {
+  width: 100%;
+  margin: 10px 10px 0px 30px;
+} */
+
+
 main{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+main #two{
   display: flex;
   flex-direction: row;
   justify-content: center;
