--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,9 @@ h4{
 }
 
 h5{
+    text-align: center;
     font-size: 0.8rem;
-    margin:50px 100px 15px 60px;
+    margin:20px 20px 15px 20px;
     font-weight: none;
 }
 
