--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ img{
 li, a {
   font-family: "poppins", sans-serif;
   font-size: 16px;
-  color: black;
+  color: #454959;
   text-decoration: none;
 }
 
