--- a/css/grid.css
+++ b/css/grid.css
@@ -1,19 +1,19 @@
 .grid{
-    max-width: 800px;
+    max-width: 1000px;
     display: grid;
     grid-template-columns:repeat(2, 1fr);
-   grid-template-rows: 500px 500px;
-   grid-gap: 50px; 
+   grid-template-rows: 520px 500px;
+   grid-gap: 80px; 
    grid-auto-flow: minmax();
    margin: 45px auto;
 }
 
 .item {
     cursor: pointer;
-    color: #fff;
+    color: black;
     padding: 0.85em;
-    background: #9dc2e7;
-    border: solid 1px rgba(110,133,156,0.15);
+    /* background: #9dc2e7; */
+    /* border: solid 1px rgba(110,133,156,0.15); */
     border-radius: 0.3em;
 }
 
@@ -21,10 +21,6 @@
     width: 100%;
     margin: 1px;
     padding: 10px;
-}
-
-.item:nth-child(even) {
-    background: #88c7f1;
 }
 
 
