--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ div#container {
     max-width: 1200px;
     margin: 25px auto;
     background-color: rgb(255, 255, 255);
-    /* box-shadow: 0px 0px 25px rgb(0 0 0 / 50%); */
+    box-shadow: 0px 0px 5px rgb(0 0 0 / 10%); 
     font: 10vh;
 }
 
@@ -107,10 +107,10 @@ nav{
   text-decoration: none;
 }
 
-
- 
-
-
+#brand{
+  font-size: 1rem;
+  padding:0px 150px ;
+}
 
 /* 
 Jess Navigation
@@ -436,8 +436,8 @@ ul.fourStep {
 }
 
 footer{
-    background-color: none;
-    padding: 20px;
+    background-color: #A5CEEC;
+    padding: 10px;
     color: black;
     font-size: .8rem;
     text-align: center;
