--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,7 @@ ul.fourStep {
 
 footer{
     background-color: #A5CEEC;
+    margin: 50px 10px;
     padding: 10px;
     color: black;
     font-size: .8rem;
