--- a/css/quiz.css
+++ b/css/quiz.css
@@ -17,6 +17,7 @@
     border: 1px solid ;
     background-color: #A5CEEC;
     border-radius: 5px;
+    margin: 0px 30px;
     padding: 5px 10px;
     color: rgb(70, 69, 69);
     outline: none;
@@ -50,6 +51,10 @@
   
   .hide {
     display: none;
+  }
+
+  #question{
+    align-items: center;
   }
 
   
